--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.34",
+    "bcryptjs": "^3.0.2",
     "mongoose": "^8.12.1",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^3.0.7",
+    "resend": "^4.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
