--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@ai-sdk/openai": "^1.3.6",
     "@ai-sdk/react": "^1.2.5",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.2",
     "@react-email/components": "^0.0.34",
     "ai": "^4.2.11",
     "axios": "^1.8.4",
