--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
     "@react-email/components": "^0.0.34",
     "ai": "^4.2.11",
     "axios": "^1.8.4",
