--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.6",
-    "@ai-sdk/react": "^1.2.5",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^1.2.12",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.2",
@@ -18,7 +19,8 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.4",
     "@react-email/components": "^0.0.34",
-    "ai": "^4.2.11",
+    "@tanstack/react-query": "^5.75.7",
+    "ai": "^4.3.15",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -28,6 +30,7 @@
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "openai": "^4.98.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^3.0.7",
